# ChangeLog for x11-libs/libX11
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.203 2013/02/25 23:17:14 mgorny Exp $

*libX11-1.5.0-r1 (25 Feb 2013)

  25 Feb 2013; Michał Górny <mgorny@gentoo.org> +libX11-1.5.0-r1.ebuild:
  Enable multilib.

  22 Feb 2013; Zac Medico <zmedico@gentoo.org> libX11-1.5.0.ebuild:
  Add ~arm-linux keyword.

  26 Aug 2012; Raúl Porcel <armin76@gentoo.org> libX11-1.5.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #419473

  12 Jul 2012; Brent Baude <ranger@gentoo.org> libX11-1.5.0.ebuild:
  Marking libX11-1.5.0 ppc stable for bug 419473

  11 Jul 2012; Brent Baude <ranger@gentoo.org> libX11-1.5.0.ebuild:
  Marking libX11-1.5.0 ppc64 stable for bug 419473

  28 Jun 2012; Jeroen Roovers <jer@gentoo.org> libX11-1.5.0.ebuild:
  Stable for HPPA (bug #419473).

  28 Jun 2012; Markus Meier <maekke@gentoo.org> libX11-1.5.0.ebuild:
  arm stable, bug #419473

  24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> libX11-1.5.0.ebuild:
  Stable for x86, wrt bug #419473

  22 Jun 2012; Agostino Sarubbo <ago@gentoo.org> libX11-1.5.0.ebuild:
  Stable for amd64, wrt bug #419473

*libX11-1.5.0 (02 Jun 2012)

  02 Jun 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libX11-1.5.0.ebuild, -libX11-1.4.99.902.ebuild:
  Version bump.

*libX11-1.4.99.902 (28 May 2012)

  28 May 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libX11-1.4.99.902.ebuild, -libX11-1.4.99.901.ebuild:
  Bump to new prerelease.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> libX11-1.4.4.ebuild,
  libX11-1.4.99.901.ebuild:
  keyword ~amd64-fbsd

*libX11-1.4.99.901 (16 Mar 2012)

  16 Mar 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libX11-1.4.99.901.ebuild, -libX11-1.4.99.1.ebuild:
  Version bump.

  15 Jan 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  libX11-1.4.4.ebuild:
  Inform eclass that we want to eautoreconf, bug #399021.
