@@ -1,0 +1,55 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/libX11-1.5.99.902.ebuild,v 1.1 2013/05/25 20:31:07 chithanh Exp $
+
+EAPI=5
+
+XORG_DOC=doc
+# needs automake-1.13 without eautoreconf
+XORG_EAUTORECONF=yes
+XORG_MULTILIB=yes
+inherit xorg-2 toolchain-funcs flag-o-matic
+
+DESCRIPTION="X.Org X11 library"
+
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris ~x86-winnt"
+IUSE="ipv6 test"
+
+RDEPEND=">=x11-libs/libxcb-1.8.1[${MULTILIB_USEDEP}]
+	x11-libs/xtrans
+	>=x11-proto/xproto-7.0.17[${MULTILIB_USEDEP}]
+	x11-proto/xf86bigfontproto[${MULTILIB_USEDEP}]
+	x11-proto/inputproto[${MULTILIB_USEDEP}]
+	x11-proto/kbproto[${MULTILIB_USEDEP}]
+	x11-proto/xextproto[${MULTILIB_USEDEP}]"
+DEPEND="${RDEPEND}
+	test? ( dev-lang/perl )"
+
+PATCHES=(
+	"${FILESDIR}"/${PN}-1.1.4-aix-pthread.patch
+	"${FILESDIR}"/${PN}-1.1.5-winnt-private.patch
+	"${FILESDIR}"/${PN}-1.1.5-solaris.patch
+)
+
+src_configure() {
+	XORG_CONFIGURE_OPTIONS=(
+		$(use_with doc xmlto)
+		$(use_enable doc specs)
+		$(use_enable ipv6)
+		--without-fop
+	)
+
+	[[ ${CHOST} == *-interix* ]] && export ac_cv_func_poll=no
+	xorg-2_src_configure
+}
+
+src_compile() {
+	# [Cross-Compile Love] Disable {C,LD}FLAGS and redefine CC= for 'makekeys'
+	if tc-is-cross-compiler; then
+		(
+			filter-flags -m*
+			emake -C "${AUTOTOOLS_BUILD_DIR}"/src/util CC=$(tc-getBUILD_CC) CFLAGS="${CFLAGS}" LDFLAGS="" clean all || die
+		)
+	fi
+	xorg-2_src_compile
+}
