@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libX11
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.203 2013/02/25 23:17:14 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.204 2013/05/25 20:31:07 chithanh Exp $
+
+*libX11-1.5.99.902 (25 May 2013)
+
+  25 May 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +libX11-1.5.99.902.ebuild:
+  Version bump, security bug #471098.
 
 *libX11-1.5.0-r1 (25 Feb 2013)
 
